// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array fields array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div />
    <span
      style={
        Object {
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <button
        className="ms-Button ms-Button--icon root-40"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-41"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-37 css-48 ms-Button-icon icon-43"
            data-icon-name="BoxAdditionSolid"
            role="presentation"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons-11\\"",
              }
            }
          >
            
          </i>
        </span>
      </button>
    </span>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-49"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-41"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-42"
          >
            <span
              className="ms-Button-label label-50"
              id="id__4"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields checkboxes 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink={true}
        htmlFor="root"
      />
      <div
        className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
        required={false}
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" "
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </div>
        <input
          autoFocus={false}
          onAnimationStart={[Function]}
          type="hidden"
          value=""
        />
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-49"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-41"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-42"
          >
            <span
              className="ms-Button-label label-50"
              id="id__34"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields fixed array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div />
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm6 ms-md8 ms-lg10"
        >
          <div
            className="ms-Grid-col ms-sm12  field field-string"
            style={
              Object {
                "marginBottom": 15,
              }
            }
          >
            <div
              className="ms-TextField is-required root-52"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-TextField-fieldGroup fieldGroup-53"
                >
                  <input
                    aria-invalid={false}
                    autoFocus={false}
                    className="ms-TextField-field field-54"
                    disabled={false}
                    id="root_0"
                    name="nodejs"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    readOnly={false}
                    required={true}
                    type="string"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Grid-col ms-sm6 ms-md4 ms-lg2"
        >
          <button
            className="ms-Button ms-Button--icon root-40"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-41"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-60 ms-Button-icon icon-43"
                data-icon-name="Up"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            className="ms-Button ms-Button--icon root-40"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-41"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-60 ms-Button-icon icon-43"
                data-icon-name="Down"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            className="ms-Button ms-Button--icon root-40"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-41"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-60 ms-Button-icon icon-43"
                data-icon-name="Remove"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm6 ms-md8 ms-lg10"
        >
          <div
            className="ms-Grid-col ms-sm12  field field-number"
            style={
              Object {
                "marginBottom": 15,
              }
            }
          >
            <div
              className="ms-TextField is-required root-52"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-TextField-fieldGroup fieldGroup-53"
                >
                  <input
                    aria-invalid={false}
                    autoFocus={false}
                    className="ms-TextField-field field-54"
                    disabled={false}
                    id="root_1"
                    name="nodejs"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    readOnly={false}
                    required={true}
                    type="number"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Grid-col ms-sm6 ms-md4 ms-lg2"
        >
          <button
            className="ms-Button ms-Button--icon root-40"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-41"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-60 ms-Button-icon icon-43"
                data-icon-name="Up"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            className="ms-Button ms-Button--icon root-40"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-41"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-60 ms-Button-icon icon-43"
                data-icon-name="Down"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            className="ms-Button ms-Button--icon root-40"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-41"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-60 ms-Button-icon icon-43"
                data-icon-name="Remove"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-49"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-41"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-42"
          >
            <span
              className="ms-Button-label label-50"
              id="id__31"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;
